Implemented responsive design and updated graphics

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,70 @@
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Exo:wght@700&display=swap');
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  overflow-x: hidden;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  color: #f2f2f2;
+  font-family: 'Alegreya Sans', sans-serif;
+}
+
+h1 {
+  width: fit-content;
+  margin: 0 auto;
+  font-family: 'Exo', sans-serif;
+  padding: 0 1em 1em 1em;
+}
+
+h4 {
+  width: fit-content;
+  font-family: 'Exo', sans-serif;
+  padding: 0;
+  margin: 0 auto;
+}
+
+@media only screen and (max-width: 600px) {
+  h1 {
+    font-size: 2.5em;
+  }
+  h4 {
+    font-size: 1em;
+  }
+  p {
+    font-size: 1.2em;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  h1 {
+    font-size: 3em;
+  }
+  h4 {
+    font-size: 1.2em;
+  }
+  p {
+    font-size: 1.3em;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  h1 {
+    font-size: 3.5em;
+  }
+  h4 {
+    font-size: 1.5em;
+  }
+  p {
+    font-size: 1.5em;
+  }
+}
+
 :root {
   --backgroundInitial: 0;
   --backgroundStart: 0;
@@ -8,11 +75,13 @@
 }
 
 #wrapper {
-  height: 100vh;
-  width: 100vw;
-  background-image: url("./images/mobileBackground01.png");
+  width: 100%;
+  padding: 0;
+  min-height: 100vh;
+  background-image: url("./images/background-small.jpg");
   background-size: 200vw 100vh;
   background-position-x: var(--backgroundInitial);
+  background-attachment: fixed;
 }
 
 .wrapper {
@@ -24,22 +93,6 @@
 @keyframes background {
   from {background-position-x: var(--backgroundStart);}
   to {background-position-x: var(--backgroundEnd);}
-}
-
-#header {
-  margin: 0 auto;
-  overflow: auto;
-  width: fit-content;
-}
-
-#header a {
-  display: block;
-}
-
-#headerHome, #headerResume, #headerSites, #headerDemos {
-  display: inline;
-  float: left;
-  margin: 0 1em;
 }
 
 .content-enter {
