--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -16,6 +16,7 @@
 }
 
 #headerLinks {
+    position: relative;
     width: fit-content;
     margin: 0 auto;
     overflow: auto;
@@ -36,6 +37,17 @@
     margin: 0.2em;
 }
 
+#underline {
+    margin-top: 2em;
+    position: relative;
+    left: 0;
+    height: 5px;
+    width: 70px;
+    transition-property: left;
+    transition-duration: 0.5s;
+    background-color: black;
+}
+
 @media only screen and (max-width: 600px) {
     #header {
         padding-top: 2em;
@@ -47,6 +59,11 @@
     #header img {
         width: 18vw;
         height: auto;
+    }
+    #underline {
+        margin-top: 1.5em;
+        width: 40px;
+        height: 5px;
     }
 }
 
@@ -62,6 +79,11 @@
         width: 12vw;
         height: auto;
     }
+    #underline {
+        margin-top: 1.25em;
+        width: 50px;
+        height: 5px;
+    }
 }
 
 @media only screen and (min-width: 992px) {
@@ -75,5 +97,10 @@
     #header img {
         width: 120px;
         height: auto;
+    }
+    #underline {
+        margin-top: 2em;
+        width: 70px;
+        height: 5px;
     }
 }
