--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -85,6 +85,13 @@
         width: 50px;
         height: 5px;
     }
+
+    @media only screen and (orientation: landscape) {
+        #header {
+            padding-top: 1em;
+            height: 15vh;
+        }
+    }
 }
 
 @media only screen and (min-width: 992px) {
