--- a/src/components/movie-database/MovieDatabase.css
+++ b/src/components/movie-database/MovieDatabase.css
@@ -4,16 +4,28 @@
     box-sizing: border-box;
 }
 
-body {
+.wrapper h1, .wrapper h2, .wrapper h3 {
+    text-align: center;
     font-family: "Open Sans", sans-serif;
+    letter-spacing: -2px;
 }
 
-h1, h2 {
-    text-align: center;
+.wrapper p {
+    font-size: 16px;
+}
+
+.wrapper h1 {
+    font-size: 46px;
+}
+
+.wrapper h3 {
+    font-size: 32px;
 }
 
 .wrapper {
     text-align: center;
+    font-family: "Open Sans", sans-serif;
+    background-color: #ffffff;
 }
 
 table {
@@ -77,9 +89,19 @@ td {
 }
 
 .buttonHolder {
-    margin: 1em auto;
+    margin: 2em auto 0 auto;
     width: fit-content;
     text-align: center;
+}
+
+.submitButton {
+    margin: 0 1em 2em 1em;
+    background-color: #c9c9c9;
+    border-radius: 10px;
+    padding: 0.5em 1em;
+    display: inline-block;
+    cursor: pointer;
+    border: 1px solid #7e7e7e;
 }
 
 .buttonView {
